{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 57,
  "lineage": "f8b31437-aa60-a8e9-f7e2-cf9b67ec3ef8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381342372118:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1808535167.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 400,
            "instances": [
              "i-045c7a9ae94ec2280",
              "i-06f03f249913bcb70"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-0a0bce92d6724056c"
            ],
            "source_security_group": "381342372118/security_group_for_elb",
            "source_security_group_id": "sg-0a0bce92d6724056c",
            "subnets": [
              "subnet-2770437b",
              "subnet-89fec9ee"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_security_group.elbsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:381342372118:instance/i-045c7a9ae94ec2280",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-045c7a9ae94ec2280",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0df691d22bfb378a0",
            "private_dns": "ip-172-31-36-55.ec2.internal",
            "private_ip": "172.31.36.55",
            "public_dns": "ec2-3-80-252-191.compute-1.amazonaws.com",
            "public_ip": "3.80.252.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bf3f105960660f85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "security_group_for_web_server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2770437b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ccea2473b6b7883b"
            ]
          },
          "depends_on": [
            "aws_security_group.websg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:381342372118:instance/i-06f03f249913bcb70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06f03f249913bcb70",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myawskeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4681032af0ab193",
            "private_dns": "ip-172-31-38-236.ec2.internal",
            "private_ip": "172.31.38.236",
            "public_dns": "ec2-54-174-202-104.compute-1.amazonaws.com",
            "public_ip": "54.174.202.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02704fe1907630b26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "security_group_for_web_server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2770437b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ccea2473b6b7883b"
            ]
          },
          "depends_on": [
            "aws_key_pair.myawskeypair",
            "aws_security_group.websg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elbsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381342372118:security-group/sg-0a0bce92d6724056c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0bce92d6724056c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_for_elb",
            "name_prefix": null,
            "owner_id": "381342372118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3f81c245"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381342372118:security-group/sg-0ccea2473b6b7883b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ccea2473b6b7883b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_for_web_server",
            "name_prefix": null,
            "owner_id": "381342372118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3f81c245"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-449069490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ccea2473b6b7883b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.websg"
          ]
        }
      ]
    }
  ]
}